--- a/src/components/DiscountItem/styles.scss
+++ b/src/components/DiscountItem/styles.scss
@@ -27,20 +27,27 @@
   }
 
   &--button {
-    padding: 1rem;
+    @include width-height(70px, 40px);
     color: #fafafa;
     background-color: #6c5ce7;
     border-radius: 4px;
     cursor: pointer;
+    display: block;
+    margin: auto 0 0 auto;
 
     &:hover {
       opacity: 0.8;
+    }
+
+    &-hidden {
+      opacity: 0.7;
     }
   }
 }
 
 .discount__wrapper1 {
   @include flex(space-between, flex-start, '', '', '');
+  margin-top: auto;
 }
 
 .discount__wrapper2 {
