--- a/src/components/InfoCart/Search/style.scss
+++ b/src/components/InfoCart/Search/style.scss
@@ -43,7 +43,8 @@
       color: #3d3f40;
       background: url(https://static.accesstrade.vn/coupon/v2/images/icon-timer-long.svg) no-repeat
         center left;
-      padding: 10px 0 0 18px;
+      padding-left: 18px;
+      margin-top: 10px;
     }
 
     &--title,
