--- a/src/components/InfoCart/styles.scss
+++ b/src/components/InfoCart/styles.scss
@@ -83,6 +83,12 @@
     &--item {
       @include flex;
       padding-bottom: 1rem;
+
+      &:nth-of-type(4) {
+        padding-top: 10px;
+        border-top: 1px solid $border-color;
+      }
+
       p {
         font-weight: 500;
       }
