--- a/src/pages/User/Payment/styles.scss
+++ b/src/pages/User/Payment/styles.scss
@@ -11,6 +11,7 @@
   .information {
     &__title {
       font-size: 2.5rem;
+      padding-left: 5px;
     }
     button + button {
       margin-left: 2rem;
@@ -102,6 +103,17 @@
         font-size: 2.5rem;
         color: $primary-color;
       }
+    }
+  }
+
+  &__title {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    svg {
+      font-size: 28px;
+      color: $primary-color;
     }
   }
 }
