--- a/src/pages/Admin/ListContact/styles.scss
+++ b/src/pages/Admin/ListContact/styles.scss
@@ -4,11 +4,11 @@
   padding: 40px 0;
 }
 
-.listContact__Action {
+.listContact__6 {
   text-align: center;
 }
 
-.listContact__Message {
+.listContact__4 {
   max-width: 280px;
   word-wrap: break-word;
 }
