--- a/src/pages/User/ProductDetail/style.scss
+++ b/src/pages/User/ProductDetail/style.scss
@@ -14,7 +14,7 @@
 
   #pointer-mini {
     display: inline-block;
-    font-size: 20pt; //Width of pointer
+    font-size: 20pt;
     width: 50px;
     height: 1em;
     position: relative;
